--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/stack": "^7.6.3",
     "expo": "~54.0.23",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets-core": "^1.6.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/socket.io-client": "^3.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
