--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.3",
     "expo": "~54.0.23",
+    "expo-linear-gradient": "^15.0.8",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
